--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -1,1 +1,88 @@
-<p>cadastro works!</p>
+<div class="form-container">
+  <div class="registration-card">
+    <div class="card-header">
+      <h1 class="card-title">Cadastre-se</h1>
+    </div>
+
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+      <!-- Nome -->
+      <div class="form-group">
+        <label class="form-label" for="firstName">Nome <span class="required-star">*</span></label>
+        <input type="text" id="firstName" class="form-control" formControlName="firstName" placeholder="Digite seu nome">
+        <p class="error-message" *ngIf="isFieldInvalid('firstName')">Nome é obrigatório.</p>
+      </div>
+
+      <!-- Sobrenome -->
+      <div class="form-group">
+        <label class="form-label" for="lastName">Sobrenome <span class="required-star">*</span></label>
+        <input type="text" id="lastName" class="form-control" formControlName="lastName" placeholder="Digite seu sobrenome">
+        <p class="error-message" *ngIf="isFieldInvalid('lastName')">Sobrenome é obrigatório.</p>
+      </div>
+
+      <!-- CPF -->
+      <div class="form-group">
+        <label class="form-label" for="cpf">CPF <span class="required-star">*</span></label>
+        <input type="text" id="cpf" class="form-control" formControlName="cpf" placeholder="000.000.000-00">
+        <p class="error-message" *ngIf="isFieldInvalid('cpf')">CPF inválido.</p>
+      </div>
+
+      <!-- Gênero -->
+      <div class="form-group">
+        <label class="form-label">Gênero <span class="required-star">*</span></label>
+        <div class="radio-group">
+          <div class="radio-container">
+            <input type="radio" id="masculino" name="gender" value="masculino" formControlName="gender">
+            <label for="masculino">Masculino</label>
+          </div>
+          <div class="radio-container">
+            <input type="radio" id="feminino" name="gender" value="feminino" formControlName="gender">
+            <label for="feminino">Feminino</label>
+          </div>
+        </div>
+      </div>
+
+      <!-- Celular -->
+      <div class="form-group">
+        <label class="form-label" for="phone">Celular com DDD <span class="required-star">*</span></label>
+        <input type="text" id="phone" class="form-control" formControlName="phone" placeholder="(00) 0 0000-0000">
+        <p class="error-message" *ngIf="isFieldInvalid('phone')">Formato inválido.</p>
+      </div>
+
+      <!-- Email -->
+      <div class="form-group">
+        <label class="form-label" for="email">E-mail <span class="required-star">*</span></label>
+        <input type="email" id="email" class="form-control" formControlName="email" placeholder="Insira seu e-mail">
+        <p class="error-message" *ngIf="isFieldInvalid('email')">E-mail inválido.</p>
+      </div>
+
+      <!-- Senha -->
+      <div class="form-group">
+        <label class="form-label" for="password">Senha <span class="required-star">*</span></label>
+        <div class="password-container">
+          <input [type]="showPassword ? 'text' : 'password'" id="password" class="form-control" formControlName="password" placeholder="Digite sua senha">
+          <!--implementar visualização de senha aqui-->
+        </div>
+        <p class="error-message" *ngIf="isFieldInvalid('password')">A senha deve ter pelo menos 8 caracteres.</p>
+      </div>
+
+      <!-- Confirmar Senha -->
+      <div class="form-group">
+        <label class="form-label" for="confirmPassword">Confirmar Senha <span class="required-star">*</span></label>
+        <div class="password-container">
+          <input [type]="showConfirmPassword ? 'text' : 'password'" id="confirmPassword" class="form-control" formControlName="confirmPassword" placeholder = "Digite a senha novamente">
+          <!--implementar visualização de senha aqui-->
+        </div>
+        <p class="error-message" *ngIf="registerForm.hasError('passwordMismatch')">As senhas não coincidem.</p>
+      </div>
+
+      <!-- Termos -->
+      <div class="checkbox-container">
+        <input type="checkbox" id="terms" formControlName="terms">
+        <label for="terms">Concordo com todos os <a href="#">Termos e Condições</a> e <a href="#">Diretrizes de Privacidade</a>. Declaro, ainda, ser maior de 18 anos.</label>
+      </div>
+
+      <!-- Botão de Envio -->
+      <button type="submit" class="submit-button" [disabled]="registerForm.invalid">Cadastrar</button>
+    </form>
+  </div>
+</div>
