--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,24 +1,32 @@
 .login-container {
     max-width: 300px;
-    margin: auto;
+    margin: 15% auto 1%;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     text-align: center;
   }
+
+  .login{
+    margin: 2px auto 20px;
+  }
   
   input {
-    width: 100%;
+    width: 90%;
     margin-bottom: 10px;
     padding: 8px;
     border: 1px solid #ddd;
     border-radius: 4px;
   }
+
+  .texto {
+    margin: 1px auto 20px;
+  }
   
   button {
-    width: 100%;
+    width: 90%;
     padding: 10px;
-    background-color: #28a745;
+    background-color: #28e56e;
     color: white;
     border: none;
     border-radius: 4px;
@@ -26,5 +34,30 @@
   }
   
   button:hover {
-    background-color: #218838;
+    background-color: #28e56e;
+  }
+
+  .login-footer {
+    text-align: center;
+    margin-top: 15px;
+  }
+  
+  .login-footer a {
+    color: #007bff;
+    text-decoration: none;
+  }
+  
+  .login-footer a:hover {
+    text-decoration: underline;
+  }
+
+  .clicavel {
+    pointer-events: auto;
+    cursor: pointer;
+    color: #007bff;
+    text-decoration: none;
+  }
+  
+  .clicavel:hover {
+    text-decoration: underline;
   }
