--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    background: linear-gradient(to bottom right, #1a1f2c, #2d3748);
+    color: white; /* Ajusta o texto para maior contraste */
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    font-family: Roboto, "Helvetica Neue", sans-serif; }
