--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,13 +1,23 @@
 <div class="login-container">
-    <h2>Login</h2>
+    <h2 class="login">Login</h2>
+
     <form (submit)="login()">
-      <label>Email:</label>
+
+      <label class="texto">Email:</label>
+
       <input type="email" [(ngModel)]="email" name="email" required /> 
       
-      <label>Senha:</label>
+      <label class="texto">Senha:</label>
+
       <input type="password" [(ngModel)]="password" name="password" required />
-      
+
+      <p class="texto"><a href="/esqueci-senha" class="clicavel">Esqueci minha senha</a></p>
+
       <button type="submit">Entrar</button>
     </form>
     <p *ngIf="errorMessage">{{ errorMessage }}</p>
+</div>
+
+<div class="login-footer">
+  <p>Não possui cadastro? <a href="/cadastro" class="clicavel">Cadastre-se aqui</a></p>
 </div>
