inclusão do modal de termos e condições, validação de cpf, data de nascimento e situação cadastral

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,11 +2,12 @@
     <h2>Login</h2>
     <form (submit)="login()">
       <label>Email:</label>
-      <input type="email" [(ngModel)]="email" name="email" required /> 
-      
+      <input type="email" [(ngModel)]="email" name="email" required />
+
       <label>Senha:</label>
       <input type="password" [(ngModel)]="password" name="password" required />
-      
+
+      <label>Não tem uma conta? <a href="cadastro">Cadastre-se!</a></label>
       <button type="submit">Entrar</button>
     </form>
     <p *ngIf="errorMessage">{{ errorMessage }}</p>
