--- a/src/app/pages/corrida/corrida.component.scss
+++ b/src/app/pages/corrida/corrida.component.scss
@@ -48,7 +48,7 @@
 
 /* Estilização da seleção */
 .selecao-tartaruga {
-  background: white;
+  background: #1e293b;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
