--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -27,7 +27,7 @@
     width: 90%;
     padding: 10px;
     background-color: #28e56e;
-    color: white;
+    color: #1e293b;
     border: none;
     border-radius: 4px;
     cursor: pointer;
