--- a/src/app/pages/cadastro/cadastro.component.html
+++ b/src/app/pages/cadastro/cadastro.component.html
@@ -4,32 +4,44 @@
       <h1 class="card-title">Cadastre-se</h1>
     </div>
 
-    <form [formGroup]="cadastroForm" (ngSubmit)="onSubmit()">
+    <form (ngSubmit)="login()" [formGroup]="cadastroForm">
       <!-- Nome -->
       <div class="form-group">
-        <label class="form-label" for="primeiroNome">Nome <span class="required-star">*</span></label>
-        <input type="text" id="primeiroNome" class="form-control" formControlName="primeiroNome" placeholder="Digite seu nome">
+        <label class="form-label" for="nomeCompleto">Nome Completo<span class="required-star">*</span></label>
+        <input
+        type="text"
+        id="nomeCompleto"
+        class="form-control"
+        formControlName="nomeCompleto"
+        placeholder="Digite seu nome">
         <!-- <p class="error-message" *ngIf="isFieldInvalid('firstName')">Nome é obrigatório.</p> -->
-      </div>
-
-      <!-- Sobrenome -->
-      <div class="form-group">
-        <label class="form-label" for="ultimoNome">Sobrenome <span class="required-star">*</span></label>
-        <input type="text" id="ultimoNome" class="form-control" formControlName="ultimoNome" placeholder="Digite seu sobrenome">
-        <!-- <p class="error-message" *ngIf="isFieldInvalid('lastName')">Sobrenome é obrigatório.</p> -->
       </div>
 
       <!-- CPF -->
       <div class="form-group">
         <label class="form-label" for="cpf">CPF <span class="required-star">*</span></label>
-        <input type="text" id="cpf" class="form-control" formControlName="cpf" placeholder ="000.000.000-00" (blur)="validarCpf()" mask="000.000.000-00" [dropSpecialCharacters]="true">
-        <!-- <p class="error-message" *ngIf="isFieldInvalid('cpf')">CPF inválido.</p> -->
+        <input
+        class="form-control"
+        id="cpf"
+        formControlName="cpf"
+        inputmode="numeric"
+        mask="000.000.000-00"
+        placeholder ="000.000.000-00"
+        type="text"
+        [dropSpecialCharacters]="true"
+        (blur)="validarCpf()">
       </div>
 
       <!-- Data de Nascimento -->
       <div class="form-group">
-        <label class="form-label" for="dataNascimento">Data de Nascimento <span class="text-danger"></span></label>
-        <input id="dataNascimento" type="date" formControlName="dataNascimento" class="form-control" (blur)="validarDataNascimento()">
+        <label class="form-label" for="dataNascimento">Data de Nascimento <span class="required-star">*</span></label>
+        <input
+        id="dataNascimento"
+        type="date"
+        formControlName="dataNascimento"
+        class="form-control"
+        (blur)="validarDataNascimento()"
+        mask="d0/M0/0000" />
         <div *ngIf="cadastroForm.get('dataNascimento')?.invalid && cadastroForm.get('dataNascimento')?.touched" class="text-danger">
           <small *ngIf="cadastroForm.get('dataNascimento')?.errors?.['required']">Campo obrigatório.</small>
           <small *ngIf="cadastroForm.get('dataNascimento')?.errors?.['invalidDate']">Data inválida.</small>
@@ -52,55 +64,73 @@
       <!-- Celular -->
       <div class="form-group">
         <label class="form-label" for="telefone">Celular com DDD <span class="required-star">*</span></label>
-        <input type="text" id="telefone" class="form-control" formControlName="telefone" placeholder="(00) 0 0000-0000" mask="(00) 0 0000-0000" [dropSpecialCharacters]="true">
-        <!-- <p class="error-message" *ngIf="isFieldInvalid('phone')">Formato inválido.</p> -->
+        <input type="text"
+        id="telefone"
+        class="form-control"
+        formControlName="telefone"
+        placeholder="(00) 0 0000-0000"
+        mask="(00) 0 0000-0000"
+        dropSpecialCharacters]="true">
       </div>
 
       <!-- Email -->
       <div class="form-group">
         <label class="form-label" for="email">E-mail <span class="required-star">*</span></label>
-        <input type="email" id="email" class="form-control" formControlName="email" placeholder="Insira seu e-mail">
-        <!-- <p class="error-message" *ngIf="isFieldInvalid('email')">E-mail inválido.</p> -->
+        <input
+        type="email"
+        id="email"
+        lass="form-control"
+        formControlName="email"
+        placeholder="Insira seu e-mail">
       </div>
 
       <!-- Senha -->
       <div class="form-group">
         <label class="form-label" for="password">Senha <span class="required-star">*</span></label>
         <div class="password-container">
-          <input [type]="showPassword ? 'text' : 'password'" id="password" class="form-control" formControlName="password" placeholder="Digite sua senha">
-          <button type="button" class="password-toggle" (click)="botaoVisibilidadeSenha()">
-            <!-- <lucide-icon [lucide]="showPassword ? icons.eyeOff : icons.eye"></lucide-icon> -->
-          </button>
+          <input
+          [type]="showPassword ? 'text' : 'password'"
+          id="password" class="form-control"
+          formControlName="password"
+          placeholder="Digite sua senha">
+          <!-- <button type="button" class="password-toggle" (click)="botaoVisibilidadeSenha()">
+          </button> -->
         </div>
-        <!-- <p class="error-message" *ngIf="isFieldInvalid('password')">A senha deve ter pelo menos 8 caracteres.</p> -->
       </div>
 
       <!-- Confirmar Senha -->
       <div class="form-group">
         <label class="form-label" for="confirmPassword">Confirmar Senha <span class="required-star">*</span></label>
         <div class="password-container">
-          <input [type]="showConfirmPassword ? 'text' : 'password'" id="confirmPassword" class="form-control" formControlName="confirmPassword" placeholder = "Digite a senha novamente">
-          <button type="button" class="password-toggle" (click)="botaoVisibilidadeConfirmacaoSenha()">
-            <!-- <lucide-icon [lucide]="showPassword ? icons.eyeOff : icons.eye"></lucide-icon> -->
-          </button>
+          <input
+          [type]="showConfirmPassword ? 'text' : 'password'"
+          id="confirmPassword" class="form-control"
+          formControlName="confirmPassword"
+          placeholder = "Digite a senha novamente">
+          <!-- <button type="button" class="password-toggle" (click)="botaoVisibilidadeConfirmacaoSenha()">
+          </button> -->
         </div>
         <p class="error-message" *ngIf="cadastroForm.hasError('passwordMismatch')">As senhas não coincidem.</p>
       </div>
 
       <!-- Termos -->
       <div class="checkbox-container">
-        <input type="checkbox" id="terms" formControlName="terms">
-        <label for="terms">Concordo com todos os <a href="#" (click)="abrirModal($event)">Termos e Condições</a> e <a href="#">Diretrizes de Privacidade</a>. Declaro, ainda, ser maior de 18 anos.</label>
+        <input
+        type="checkbox"
+        id="terms"
+        formControlName="terms">
+        <label for="terms">Concordo com todos os <a href="#">Termos e Condições</a> e <a href="#">Diretrizes de Privacidade</a>. Declaro, ainda, ser maior de 18 anos.</label>
+        <!-- <label for="terms">Concordo com todos os <a href="#" (click)="abrirModal($event)">Termos e Condições</a> e <a href="#">Diretrizes de Privacidade</a>. Declaro, ainda, ser maior de 18 anos.</label> -->
       </div>
 
       <!-- Modal Termos -->
-      <div class="modal" *ngIf="mostrarModal">
+      <!-- <div class="modal" *ngIf="mostrarModal">
         <div clas="modal-content">
           <span class="fechar" (click)="fecharModal()">X</span>
           <h2>Termos e Condições</h2>
           <p>Colocar os termos aqui :p</p>
         </div>
-      </div>
+      </div> -->
 
       <!-- Botão de Envio -->
       <button type="submit" class="submit-button" [disabled]="cadastroForm.invalid">Cadastrar</button>
